chandeliers-lus/tests/warn/dead_code/unused.stderr
error: method `step` is never used
 --> tests/warn/dead_code/unused.rs:7:10
  |
7 |     node count2() returns (n : int);
  |          ^^^^^^ method in this implementation
  |
note: the lint level is defined here
 --> tests/warn/dead_code/unused.rs:1:9
  |
1 | #![deny(dead_code)]
  |         ^^^^^^^^^
